Thu Sep 17 20:30:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger:

          DevGuideExamples updates.

Thu Sep 17 19:55:16 UTC 2009  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/doc/tests:

          Updated config path info for running test.

        * performance-tests/Bench/tools/mkpkg:

          Changed to use version of ACE TAO besides 1.5a.

Thu Sep 17 15:48:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_java.cpp:

          Added guard around use of long long and unsigned long long as
          a union discriminator.

Wed Sep 16 17:49:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:

          Updated nightly Messenger and Messenger_ZeroCopy tests.

        * DevGuideExamples/DCPS/Messenger_ZeroCopy:

          Messenger_ZeroCopy redux.

Wed Sep 16 05:05:23 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Added missing initialization code for OWNERSHIP on DataReader and
          DataWriter entities.

        * java/idl2jni/codegen/be_init.cpp:

          Added missing tao/Version.h include.

Wed Sep 16 04:57:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListener.h:
        * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
        * DevGuideExamples/DCPS/Messenger/Messenger.idl:
        * DevGuideExamples/DCPS/Messenger/Writer.h:
        * DevGuideExamples/DCPS/Messenger/Writer.cpp:
        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/stack_subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListener.h:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListener.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Messenger.idl: