@@ -1,0 +1,193 @@
+/*
+ * $Id$
+ *
+ * Copyright 2009 Object Computing, Inc.
+ *
+ * Distributed under the OpenDDS License.
+ * See: http://www.opendds.org/license.html
+ */
+
+#include <ace/Log_Msg.h>
+
+#include <dds/DdsDcpsInfrastructureC.h>
+#include <dds/DdsDcpsPublicationC.h>
+#include <dds/DCPS/Marked_Default_Qos.h>
+#include <dds/DCPS/Service_Participant.h>
+#include <dds/DCPS/WaitSet.h>
+#include <dds/DCPS/transport/framework/TheTransportFactory.h>
+
+#ifdef ACE_AS_STATIC_LIBS
+#include <dds/DCPS/transport/simpleTCP/SimpleTcp.h>
+#endif
+
+#include "MessengerTypeSupportImpl.h"
+
+static DDS::Duration_t timeout = { 30, 0 };
+
+int
+ACE_TMAIN(int argc, ACE_TCHAR *argv[])
+{
+  try {
+    // Initialize DomainParticipantFactory
+    DDS::DomainParticipantFactory_var dpf =
+      TheParticipantFactoryWithArgs(argc, argv);
+
+    // Create DomainParticipant
+    DDS::DomainParticipant_var participant =
+      dpf->create_participant(42,
+                              PARTICIPANT_QOS_DEFAULT,
+                              DDS::DomainParticipantListener::_nil(),
+                              OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(participant.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_participant failed!\n")),
+                       -1);
+    }
+
+    // Register TypeSupport (Messenger::Message)
+    Messenger::MessageTypeSupport_var ts =
+      new Messenger::MessageTypeSupportImpl();
+
+    if (ts->register_type(participant.in(), "") != DDS::RETCODE_OK) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: register_type failed!\n")),
+                       -1);
+    }
+
+    // Create Topic (Movie Discussion List)
+    DDS::Topic_var topic =
+      participant->create_topic("Movie Discussion List",
+                                ts->get_type_name(),
+                                TOPIC_QOS_DEFAULT,
+                                DDS::TopicListener::_nil(),
+                                OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(topic.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_topic failed!\n")),
+                       -1);
+    }
+
+    // Create Publisher
+    DDS::Publisher_var publisher =
+      participant->create_publisher(PUBLISHER_QOS_DEFAULT,
+                                    DDS::PublisherListener::_nil(),
+                                    OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(publisher.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_publisher failed!\n")),
+                       -1);
+    }
+
+    // Initialize and attach Transport
+    OpenDDS::DCPS::TransportImpl_rch transport_impl =
+      TheTransportFactory->create_transport_impl(OpenDDS::DCPS::DEFAULT_SIMPLE_TCP_ID,
+                                                 OpenDDS::DCPS::AUTO_CONFIG);
+
+    if (transport_impl->attach(publisher.in()) != OpenDDS::DCPS::ATTACH_OK) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: attach failed!\n")),
+                       -1);
+    }
+
+    // Create DataWriter
+    DDS::DataWriter_var writer =
+      publisher->create_datawriter(topic.in(),
+                                   DATAWRITER_QOS_DEFAULT,
+                                   DDS::DataWriterListener::_nil(),
+                                   OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(writer.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_datawriter failed!\n")),
+                       -1);
+    }
+
+    Messenger::MessageDataWriter_var writer_i =
+      Messenger::MessageDataWriter::_narrow(writer.in());
+
+    if (CORBA::is_nil(writer_i.in())) {
+        ACE_ERROR_RETURN((LM_ERROR,
+                          ACE_TEXT("%N:%l main()")
+                          ACE_TEXT(" ERROR: _narrow failed!\n")),
+                         -1);
+    }
+
+    // Block until Subscriber is available
+    DDS::StatusCondition_var condition = writer->get_statuscondition();
+    condition->set_enabled_statuses(DDS::PUBLICATION_MATCHED_STATUS);
+
+    DDS::WaitSet_var ws = new DDS::WaitSet;
+    ws->attach_condition(condition);
+
+    DDS::ConditionSeq conditions;
+    DDS::PublicationMatchedStatus matches = { 0, 0, 0, 0, 0 };
+
+    do {
+      if (ws->wait(conditions, timeout) != DDS::RETCODE_OK) {
+        ACE_ERROR_RETURN((LM_ERROR,
+                          ACE_TEXT("%N:%l main()")
+                          ACE_TEXT(" ERROR: wait failed!\n")),
+                         -1);
+      }
+
+      if (writer->get_publication_matched_status(matches) != ::DDS::RETCODE_OK) {
+        ACE_ERROR_RETURN((LM_ERROR,
+                          ACE_TEXT("%N:%l main()")
+                          ACE_TEXT(" ERROR: get_publication_matched_status failed!\n")),
+                         -1);
+      }
+
+    } while (matches.current_count < 1);
+
+    ws->detach_condition(condition);
+
+    // Write samples
+    Messenger::Message message;
+    message.subject_id = 99;
+
+    message.from       = CORBA::string_dup("Comic Book Guy");
+    message.subject    = CORBA::string_dup("Review");
+    message.text       = CORBA::string_dup("Worst. Movie. Ever.");
+    message.count      = 0;
+
+    for (int i = 0; i < 10; i++) {
+      DDS::ReturnCode_t error = writer_i->write(message, DDS::HANDLE_NIL);
+
+      if (error != DDS::RETCODE_OK) {
+        ACE_ERROR((LM_ERROR,
+                   ACE_TEXT("%N:%l main()")
+                   ACE_TEXT(" ERROR: write returned %d!\n"), error));
+      }
+    }
+
+    // Wait for samples to be acknowledged
+    if (writer_i->wait_for_acknowledgments(timeout) != DDS::RETCODE_OK) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: wait_for_acknowledgments failed!\n")),
+                       -1);
+    }
+
+    // Clean-up!
+    participant->delete_contained_entities();
+    dpf->delete_participant(participant.in());
+
+    TheTransportFactory->release();
+    TheServiceParticipant->shutdown();
+
+  } catch (const CORBA::Exception& e) {
+    e._tao_print_exception("Exception caught in main():");
+    return -1;
+  }
+
+  return 0;
+}
