@@ -1,0 +1,162 @@
+/*
+ * $Id$
+ *
+ * Copyright 2009 Object Computing, Inc.
+ *
+ * Distributed under the OpenDDS License.
+ * See: http://www.opendds.org/license.html
+ */
+
+#include <ace/Log_Msg.h>
+
+#include <dds/DdsDcpsInfrastructureC.h>
+#include <dds/DdsDcpsSubscriptionC.h>
+#include <dds/DCPS/Marked_Default_Qos.h>
+#include <dds/DCPS/Service_Participant.h>
+#include <dds/DCPS/WaitSet.h>
+#include <dds/DCPS/transport/framework/TheTransportFactory.h>
+
+#ifdef ACE_AS_STATIC_LIBS
+#include <dds/DCPS/transport/simpleTCP/SimpleTcp.h>
+#endif
+
+#include "DataReaderListenerImpl.h"
+#include "MessengerTypeSupportImpl.h"
+
+static DDS::Duration_t timeout = { 30, 0 }; // 30 seconds
+
+int
+ACE_TMAIN(int argc, ACE_TCHAR *argv[])
+{
+  try {
+    // Initialize DomainParticipantFactory
+    DDS::DomainParticipantFactory_var dpf =
+      TheParticipantFactoryWithArgs(argc, argv);
+
+    // Create DomainParticipant
+    DDS::DomainParticipant_var participant =
+      dpf->create_participant(42,
+                              PARTICIPANT_QOS_DEFAULT,
+                              DDS::DomainParticipantListener::_nil(),
+                              OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(participant.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_participant() failed!\n")), -1);
+    }
+
+    // Register Type (Messenger::Message)
+    Messenger::MessageTypeSupport_var ts =
+      new Messenger::MessageTypeSupportImpl();
+
+    if (ts->register_type(participant.in(), "") != DDS::RETCODE_OK) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: register_type() failed!\n")), -1);
+    }
+
+    // Create Topic (Movie Discussion List)
+    DDS::Topic_var topic =
+      participant->create_topic("Movie Discussion List",
+                                ts->get_type_name(),
+                                TOPIC_QOS_DEFAULT,
+                                DDS::TopicListener::_nil(),
+                                OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(topic.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_topic() failed!\n")), -1);
+    }
+
+    // Create Subscriber
+    DDS::Subscriber_var subscriber =
+      participant->create_subscriber(SUBSCRIBER_QOS_DEFAULT,
+                                     DDS::SubscriberListener::_nil(),
+                                     OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(subscriber.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_subscriber() failed!\n")), -1);
+    }
+
+    // Initialize and attach Transport
+    OpenDDS::DCPS::TransportImpl_rch transport_impl =
+      TheTransportFactory->create_transport_impl(OpenDDS::DCPS::DEFAULT_SIMPLE_TCP_ID,
+                                                 OpenDDS::DCPS::AUTO_CONFIG);
+
+    OpenDDS::DCPS::AttachStatus status = transport_impl->attach(subscriber.in());
+
+    if (status != OpenDDS::DCPS::ATTACH_OK) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: attach() failed!\n")), -1);
+    }
+
+    // Create DataReader
+    DataReaderListenerImpl listener;
+
+    DDS::DataReader_var reader =
+      subscriber->create_datareader(topic.in(),
+                             DATAREADER_QOS_DEFAULT,
+                             &listener,
+                             OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+
+    if (CORBA::is_nil(reader.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: create_datareader() failed!\n")), -1);
+    }
+
+    Messenger::MessageDataReader_var reader_i =
+      Messenger::MessageDataReader::_narrow(reader);
+
+    if (CORBA::is_nil(reader_i.in())) {
+      ACE_ERROR_RETURN((LM_ERROR,
+                        ACE_TEXT("%N:%l main()")
+                        ACE_TEXT(" ERROR: _narrow failed!\n")),
+                       -1);
+    }
+
+    // Block until Publisher completes
+    DDS::StatusCondition_var condition = reader->get_statuscondition();
+    condition->set_enabled_statuses(DDS::SUBSCRIPTION_MATCHED_STATUS);
+
+    DDS::WaitSet_var ws = new DDS::WaitSet;
+    ws->attach_condition(condition);
+
+    DDS::ConditionSeq conditions;
+    DDS::SubscriptionMatchedStatus matches = { 0, 0, 0, 0, 0 };
+
+    do {
+      if (ws->wait(conditions, timeout) != DDS::RETCODE_OK) {
+        ACE_ERROR_RETURN((LM_ERROR,
+                          ACE_TEXT("%N:%l main()")
+                          ACE_TEXT(" ERROR: wait() failed!\n")), -1);
+      }
+
+      if (reader->get_subscription_matched_status(matches) != DDS::RETCODE_OK) {
+        ACE_ERROR_RETURN((LM_ERROR,
+                          ACE_TEXT("%N:%l main()")
+                          ACE_TEXT(" ERROR: get_subscription_matched_status() failed!\n")), -1);
+      }
+    } while (matches.current_count > 0);
+
+    ws->detach_condition(condition);
+
+    // Clean-up!
+    participant->delete_contained_entities();
+    dpf->delete_participant(participant.in());
+
+    TheTransportFactory->release();
+    TheServiceParticipant->shutdown();
+
+  } catch (const CORBA::Exception& e) {
+    e._tao_print_exception("Exception caught in main():");
+    return -1;
+  }
+
+  return 0;
+}
