@@ -1,0 +1,8 @@
+;
+; $Id$
+;
+
+[common]
+
+[transport_impl_1]
+transport_type=SimpleTcp
