@@ -129,6 +129,7 @@ performance-tests/DCPS/TCPListenerTest/run_test-4p1s.pl: !DCPS_MIN
 # Not running UDPListenerTest due to the machine dependent peformance of UDP.
 
 DevGuideExamples/DCPS/Messenger/run_test.pl: !DCPS_MIN
+DevGuideExamples/DCPS/Messenger_ZeroCopy/run_test.pl: !DCPS_MIN
 
 examples/DCPS/Messenger_Imr/run_test.pl: !DCPS_MIN !MIN_CORBA !CORBA_E_COMPACT !CORBA_E_MICRO !DDS_NO_ORBSVCS
 
